argocd/argocd-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server
spec:
  type: NodePort
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
    nodePort: 30080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8080
    nodePort: 30443
